crates/ty_python_semantic/resources/mdtest/snapshots/functions.md_-_Generic_functions___L…_-_Inferring_a_constrai…_(48ab83f977c109b4).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: functions.md - Generic functions: Legacy syntax - Inferring a constrained typevar
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/functions.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVar
 2 | 
 3 | T = TypeVar("T", int, None)
 4 | 
 5 | def f(x: T) -> T:
 6 |     return x
 7 | 
 8 | reveal_type(f(1))  # revealed: int
 9 | reveal_type(f(True))  # revealed: int
10 | reveal_type(f(None))  # revealed: None
11 | # error: [invalid-argument-type]
12 | reveal_type(f("string"))  # revealed: Unknown
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `f` is incorrect
  --> src/mdtest_snippet.py:12:15
   |
10 | reveal_type(f(None))  # revealed: None
11 | # error: [invalid-argument-type]
12 | reveal_type(f("string"))  # revealed: Unknown
   |               ^^^^^^^^ Argument type `Literal["string"]` does not satisfy constraints (`int`, `None`) of type variable `T`
   |
info: Type variable defined here
 --> src/mdtest_snippet.py:3:1
  |
1 | from typing import TypeVar
2 |
3 | T = TypeVar("T", int, None)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | def f(x: T) -> T:
  |
info: rule `invalid-argument-type` is enabled by default

```
